# homebrew-custom-git

./: README.md
Formula/: custom-git.rb
commands/gcommit/: CMakeLists.txt
commands/gcommit/src/: hdbscan.cpp  hdbscan.hpp  hierarchal.cpp  hierarchal.hpp  main.cpp  mst.hpp  union_find.hpp
commands/gcommit/terminal-ui/source/: app.tsx  cli.tsx  types.ts
commands/gcommit/terminal-ui/source/components/: Dendrogram.tsx  FileTree.tsx
commands/gcommit/terminal-ui/source/contexts/: GitContext.tsx
commands/gcommit/terminal-ui/source/utils/: consts.ts
commands/qcommit/: git-qcommit
scripts/: build_all.sh  install.sh
shared/: ast.cpp  ast.hpp  async_openai_api.cpp  async_openai_api.hpp  diffreader.cpp  diffreader.hpp  utils.cpp  utils.hpp
